Sandbox/07-02-2025/force-app/main/default/objects/Buyer_Mapping__c/Buyer_Mapping__c.object-meta.xml
<CustomObject>
    <label>Buyer Mapping</label>
    <nameField>
        <displayFormat>BM-{000000000}</displayFormat>
        <label>Buyer Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>