Sandbox/07-02-2025/force-app/main/default/objects/Buyer_Mapping__c/fields/Buyer_Account_iD__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Account_iD__c</fullName>
    <formula>Buyer_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Account ID</label>
    <type>Text</type>
</CustomField>