Sandbox/07-02-2025/force-app/main/default/objects/Buyer_Mapping__c/fields/Buyer_Holding_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Holding_Group_Name__c</fullName>
    <formula>Buyer_Account__r.Buyer_Holding_Group_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Holding Group Name</label>
    <type>Text</type>
</CustomField>