Sandbox/07-02-2025/force-app/main/default/objects/Buyer_Mapping__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>