Sandbox/07-02-2025/force-app/main/default/objects/Buyer_Mapping__c/listViews/Exceptions_Aug.listView-meta.xml
<ListView>
    <fullName>Exceptions_Aug</fullName>
    <columns>NAME</columns>
    <columns>Buyer_Global__c</columns>
    <columns>Buyer_Raw__c</columns>
    <columns>Platform__c</columns>
    <columns>Buyer_Country_Raw__c</columns>
    <columns>Buyer_Account__c</columns>
    <columns>Buyer_and_Buyer_Country__c</columns>
    <columns>PDT_Member__c</columns>
    <columns>Created_From_Exception__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Platform__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Buyer_Global__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Platform__c</field>
        <operation>notContain</operation>
        <value>THE TRADE DESK - DATA ALLIANCE</value>
    </filters>
    <label>Exceptions (juLY 22)</label>
</ListView>