Sandbox/07-02-2025/force-app/main/default/objects/Buyer_Mapping__c/listViews/Unknowns.listView-meta.xml
<ListView>
    <fullName>Unknowns</fullName>
    <columns>NAME</columns>
    <columns>Created_From_Exception__c</columns>
    <columns>Buyer_Country_Raw__c</columns>
    <columns>Buyer_Raw__c</columns>
    <columns>Buyer_Account__c</columns>
    <columns>PDT_Member__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Buyer_Holding_Group_Name__c</columns>
    <columns>Platform__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Buyer_and_Buyer_Country__c</field>
        <operation>contains</operation>
        <value>,Unknown</value>
    </filters>
    <filters>
        <field>Buyer_Raw__c</field>
        <operation>contains</operation>
        <value>matterkind us</value>
    </filters>
    <label>Exception (Unknowns)</label>
</ListView>